# ph-earthquake-api

./: README.md  docker-compose.yml  pyproject.toml  requirements_dev.txt
api/: main.py
api/functions/: parser.py
api/routers/: data.py  latest.py
api/utils/: config.py  scraper.py
app/: main.py
app/functions/: parser.py
app/routers/: data.py  latest.py
app/utils/: scraper.py
functions/: eq_latest.py
utils/: scraper.py
