[project]
name = "earthquake-phivolcs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "fastapi[standard]>=0.115.12",
    "lxml>=5.4.0",
    "requests>=2.32.3",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["C", "E", "F", "W", "B", "B9"]
ignore = ["E501", "E203"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]
